publish commit bf2649762819d1e25b7406426c84a89e0d5f6a17

--- a/404.html
+++ b/404.html
@@ -33,8 +33,8 @@
 <meta property="og:locale" content="en_GB" />
 <meta name="description" content="The demonstration page for the Grape Academic Theme, a jekyll theme for academic portfolios based on the Grape Theme." />
 <meta property="og:description" content="The demonstration page for the Grape Academic Theme, a jekyll theme for academic portfolios based on the Grape Theme." />
-<link rel="canonical" href="https://h6kplus.github.io//owenhuang.github.io/404.html" />
-<meta property="og:url" content="https://h6kplus.github.io//owenhuang.github.io/404.html" />
+<link rel="canonical" href="https://h6kplus.github.io/owenhuang.github.io/404.html" />
+<meta property="og:url" content="https://h6kplus.github.io/owenhuang.github.io/404.html" />
 <meta property="og:site_name" content="Grape Academic Theme" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
@@ -42,7 +42,7 @@
 <meta name="twitter:site" content="@chrjabs" />
 <meta name="twitter:creator" content="@Christoph Jabs (chrjabs)" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"The demonstration page for the Grape Academic Theme, a jekyll theme for academic portfolios based on the Grape Theme.","headline":"Page not found","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io//owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"url":"https://h6kplus.github.io//owenhuang.github.io/404.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"The demonstration page for the Grape Academic Theme, a jekyll theme for academic portfolios based on the Grape Theme.","headline":"Page not found","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io/owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"url":"https://h6kplus.github.io/owenhuang.github.io/404.html"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
