--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <meta property="og:locale" content="en_GB" />
 <meta name="description" content="Personal portfolio" />
 <meta property="og:description" content="Personal portfolio" />
-<link rel="canonical" href="https://h6kplus.github.io//owenhuang.github.io/" />
-<meta property="og:url" content="https://h6kplus.github.io//owenhuang.github.io/" />
+<link rel="canonical" href="https://h6kplus.github.io/owenhuang.github.io/" />
+<meta property="og:url" content="https://h6kplus.github.io/owenhuang.github.io/" />
 <meta property="og:site_name" content="Grape Academic Theme" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
@@ -42,7 +42,7 @@
 <meta name="twitter:site" content="@chrjabs" />
 <meta name="twitter:creator" content="@Christoph Jabs (chrjabs)" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"Personal portfolio","headline":"Portfolio","name":"Christoph Jabs","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io//owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"sameAs":["https://twitter.com/chrjabs","https://github.com/chrjabs"],"url":"https://h6kplus.github.io//owenhuang.github.io/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"Personal portfolio","headline":"Portfolio","name":"Christoph Jabs","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io/owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"sameAs":["https://twitter.com/chrjabs","https://github.com/chrjabs"],"url":"https://h6kplus.github.io/owenhuang.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
