--- a/presentations.html
+++ b/presentations.html
@@ -33,8 +33,8 @@
 <meta property="og:locale" content="en_GB" />
 <meta name="description" content="List of held presentations" />
 <meta property="og:description" content="List of held presentations" />
-<link rel="canonical" href="https://h6kplus.github.io//owenhuang.github.io/presentations.html" />
-<meta property="og:url" content="https://h6kplus.github.io//owenhuang.github.io/presentations.html" />
+<link rel="canonical" href="https://h6kplus.github.io/owenhuang.github.io/presentations.html" />
+<meta property="og:url" content="https://h6kplus.github.io/owenhuang.github.io/presentations.html" />
 <meta property="og:site_name" content="Grape Academic Theme" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
@@ -42,7 +42,7 @@
 <meta name="twitter:site" content="@chrjabs" />
 <meta name="twitter:creator" content="@Christoph Jabs (chrjabs)" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"List of held presentations","headline":"Presentations","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io//owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"url":"https://h6kplus.github.io//owenhuang.github.io/presentations.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Christoph Jabs (chrjabs)"},"description":"List of held presentations","headline":"Presentations","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://h6kplus.github.io/owenhuang.github.io/assets/img/smile.png"},"name":"Christoph Jabs (chrjabs)"},"url":"https://h6kplus.github.io/owenhuang.github.io/presentations.html"}</script>
 <!-- End Jekyll SEO tag -->
 
 </head>
