--- a/example-hub.html
+++ b/example-hub.html
@@ -12,9 +12,9 @@
 
 
 <div id="profile">
-  <a href="/owenhuang.github.io/portfolio">
+  <a href="/h6kplus.github.io/portfolio">
     <div class="img-wrap">
-      <img src="/owenhuang.github.io/assets/img/avatar.jpg" alt="profile-image">
+      <img src="/h6kplus.github.io/assets/img/avatar.jpg" alt="profile-image">
     </div>
   </a>
   <p class="username">Yidong Huang</p>
@@ -48,6 +48,12 @@
 
 
 
+
+<li>
+  <a href="https://www.linkedin.com/in/yidong-huang-61a86423b/" target="_blank" title="Linkedin">
+    <i class="fab fa-linkedin"></i>
+  </a>
+</li>
 
 
 
