--- a/example-hub.html
+++ b/example-hub.html
@@ -12,9 +12,9 @@
 
 
 <div id="profile">
-  <a href="/h6kplus.github.io/portfolio">
+  <a href="/owenhuang.github.io/portfolio">
     <div class="img-wrap">
-      <img src="/h6kplus.github.io/assets/img/avatar.jpg" alt="profile-image">
+      <img src="/owenhuang.github.io/assets/img/avatar.jpg" alt="profile-image">
     </div>
   </a>
   <p class="username">Yidong Huang</p>
