publish commit f58cd45019bc41d56e0c74149d8103d36976e76f

--- a/index.html
+++ b/index.html
@@ -487,6 +487,21 @@ This work not only sets a new benchmark in the non-reference natural image quali
     <p class="title">RECENT PUBLICATIONS</p>
     [<a class="btn" href="/owenhuang.github.io/publications" title="Publications">All Publications</a>]
     <ol class="bibliography"><li><!-- Entry bib key -->
+<div id="wei2023esrgan">
+  
+  <!-- Title -->
+  <div class="title">A-ESRGAN: Training real-world blind super-resolution with attention U-Net Discriminators</div>
+  <!-- Author -->
+  <div class="author">Wei, Zihao,&nbsp;Huang, Yidong,&nbsp;Chen, Yuang,&nbsp;Zheng, Chenhao,&nbsp;and Gao, Jingnan
+  </div>
+
+  <!-- Journal/Book title and date -->
+  
+  <div class="third-line">
+    In Pacific Rim International Conference on Artificial Intelligence, pp. 16–27, 2023
+  </div>
+</div></li>
+<li><!-- Entry bib key -->
 <div id="xu2023cyclenet">
   
   <!-- Title -->
@@ -498,37 +513,22 @@ This work not only sets a new benchmark in the non-reference natural image quali
   <!-- Journal/Book title and date -->
   
   <div class="third-line">
-    arXiv preprint arXiv:2310.13165, 2023
+    In Thirty-seventh Conference on Neural Information Processing Systems, 2023
   </div>
 </div></li>
 <li><!-- Entry bib key -->
-<div id="ma2022dorothie">
+<div id="xu2023inversion">
   
   <!-- Title -->
-  <div class="title">DOROTHIE: Spoken Dialogue for Handling Unexpected Situations in Interactive Autonomous Driving Agents</div>
+  <div class="title">Inversion-Free Image Editing with Natural Language</div>
   <!-- Author -->
-  <div class="author">Ma, Ziqiao,&nbsp;VanDerPloeg, Benjamin,&nbsp;Bara, Cristian-Paul,&nbsp;Huang, Yidong,&nbsp;Kim, Eui-In,&nbsp;Gervits, Felix,&nbsp;Marge, Matthew,&nbsp;and Chai, Joyce
+  <div class="author">Xu, Sihan,&nbsp;Huang, Yidong,&nbsp;Pan, Jiayi,&nbsp;Ma, Ziqiao,&nbsp;and Chai, Joyce
   </div>
 
   <!-- Journal/Book title and date -->
   
   <div class="third-line">
-    In Findings of the Association for Computational Linguistics: EMNLP 2022, pp. 4800–4822, 2022
-  </div>
-</div></li>
-<li><!-- Entry bib key -->
-<div id="https://doi.org/10.48550/arxiv.2204.10976">
-  
-  <!-- Title -->
-  <div class="title">Discovering Intrinsic Reward with Contrastive Random Walk</div>
-  <!-- Author -->
-  <div class="author">Pan, Zixuan,&nbsp;Wei, Zihao,&nbsp;Huang, Yidong,&nbsp;and Gupta, Aditya
-  </div>
-
-  <!-- Journal/Book title and date -->
-  
-  <div class="third-line">
-    2022
+    arXiv preprint arXiv:2312.04965, 2023
   </div>
 </div></li></ol>
   </div>
