--- a/publications.html
+++ b/publications.html
@@ -87,6 +87,27 @@
   <h1 class="title">Publications</h1>
   <h2 class="bibliography">2023</h2>
 <ol class="bibliography"><li><!-- Entry bib key -->
+<div id="wei2023esrgan">
+  
+  <!-- Title -->
+  <div class="title">A-ESRGAN: Training real-world blind super-resolution with attention U-Net Discriminators</div>
+  <!-- Author -->
+  <div class="author">Wei, Zihao,&nbsp;Huang, Yidong,&nbsp;Chen, Yuang,&nbsp;Zheng, Chenhao,&nbsp;and Gao, Jingnan
+  </div>
+
+  <!-- Journal/Book title and date -->
+  
+  <div class="third-line">
+    In Pacific Rim International Conference on Artificial Intelligence, pp. 16–27, 2023
+  </div>
+
+  <!-- Links/Buttons -->
+  <div class="links">
+  </div>
+
+  
+</div></li>
+<li><!-- Entry bib key -->
 <div id="xu2023cyclenet">
   
   <!-- Title -->
@@ -98,7 +119,28 @@
   <!-- Journal/Book title and date -->
   
   <div class="third-line">
-    arXiv preprint arXiv:2310.13165, 2023
+    In Thirty-seventh Conference on Neural Information Processing Systems, 2023
+  </div>
+
+  <!-- Links/Buttons -->
+  <div class="links">
+  </div>
+
+  
+</div></li>
+<li><!-- Entry bib key -->
+<div id="xu2023inversion">
+  
+  <!-- Title -->
+  <div class="title">Inversion-Free Image Editing with Natural Language</div>
+  <!-- Author -->
+  <div class="author">Xu, Sihan,&nbsp;Huang, Yidong,&nbsp;Pan, Jiayi,&nbsp;Ma, Ziqiao,&nbsp;and Chai, Joyce
+  </div>
+
+  <!-- Journal/Book title and date -->
+  
+  <div class="third-line">
+    arXiv preprint arXiv:2312.04965, 2023
   </div>
 
   <!-- Links/Buttons -->
@@ -148,30 +190,6 @@
   <div class="links">
       [<a href="https://arxiv.org/abs/2204.10976" class="btn btn-sm z-depth-0" role="button">URL</a>]
       [<a href="http://doi.org/10.48550/ARXIV.2204.10976" class="btn btn-sm z-depth-0" role="button">DOI</a>]
-  </div>
-
-  
-</div></li></ol>
-<h2 class="bibliography">2021</h2>
-<ol class="bibliography"><li><!-- Entry bib key -->
-<div id="https://doi.org/10.48550/arxiv.2112.10046">
-  
-  <!-- Title -->
-  <div class="title">A-ESRGAN: Training Real-World Blind Super-Resolution with Attention U-Net Discriminators</div>
-  <!-- Author -->
-  <div class="author">Wei, Zihao,&nbsp;Huang, Yidong,&nbsp;Chen, Yuang,&nbsp;Zheng, Chenhao,&nbsp;and Gao, Jinnan
-  </div>
-
-  <!-- Journal/Book title and date -->
-  
-  <div class="third-line">
-    2021
-  </div>
-
-  <!-- Links/Buttons -->
-  <div class="links">
-      [<a href="https://arxiv.org/abs/2112.10046" class="btn btn-sm z-depth-0" role="button">URL</a>]
-      [<a href="http://doi.org/10.48550/ARXIV.2112.10046" class="btn btn-sm z-depth-0" role="button">DOI</a>]
   </div>
 
   
