--- a/example-hub.html
+++ b/example-hub.html
@@ -24,7 +24,7 @@
     
 
 <li>
-  <a href="mailto:%6F%77%65%6E%68%6A%69@%75%6D%69%63%68.%65%64%75" target="_blank" title="Email">
+  <a href="mailto:%6F%77%65%6E%68@%63%73.%75%6E%63.%65%64%75" target="_blank" title="Email">
     <i class="fas fa-envelope"></i>
   </a>
 </li>
